# pravash

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/development/: history.md  migration.md  roadmap.md
examples/: basic_fluid.rs  multiphase.rs  shallow_water.rs
scripts/: bench-history.sh  bench-regression.sh
src/: ai.rs  bridge.rs  buoyancy.rs  common.rs  compute.rs  coupling.rs  error.rs  grid.rs  lib.rs  logging.rs  mpm.rs  phase_field.rs  shallow.rs  sph.rs  vof.rs  vortex.rs
tests/: integration.rs
